--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <div style="text-align: center">
       <h1>Welcome to Brand Shop CRUD Node Server</h1>
       <h3>Our brand shop is selling Technology and Electronics products.</h3>
+      <img
+        src="https://inneed-assets.s3.ap-south-1.amazonaws.com/nazmul/logo.png"
+        alt=""
+      />
     </div>
   </body>
 </html>
